--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -63,8 +63,8 @@ jobs:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
           input_path: .
-          output_dir: ./export
-          images_dir: ./doc/img
+          output_dir: export
+          images_dir: doc/img
           # for example <img src="./images/file-name.png">
           #image_import: ./images
           build_pdf: true
