--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -62,7 +62,7 @@ jobs:
 
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_path: .
+          input_path: doc
           output_dir: export
           images_dir: doc/img
           # for example <img src="./images/file-name.png">
