--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -59,6 +59,8 @@ jobs:
       - name: Create export directories
         run: |
           mkdir -p export
+          ls -la
+          ls -la doc
 
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
@@ -71,9 +73,16 @@ jobs:
           build_html: false
           table_of_contents: true
 
+      - uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: export
+
       - name: List exported files
         run: |
-          ls -la ./export
+          ls -la .
+          ls -la doc
+          ls -la export
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
