--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -72,9 +72,9 @@ jobs:
           output_dir: export/
           images_dir: doc/img
           # for example <img src="./images/file-name.png">
-          #image_import: ./images
+          image_import: ./doc/img
           build_pdf: true
-          build_html: false
+          build_html: true
           table_of_contents: true
 
       - name: Rename export files
