--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -72,7 +72,7 @@ jobs:
           output_dir: export/
           images_dir: doc/img
           # for example <img src="./images/file-name.png">
-          image_import: ./doc/img
+          image_import: ./img
           build_pdf: true
           build_html: true
           table_of_contents: true
