--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -68,11 +68,11 @@ jobs:
 
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_path: doc
+          input_path: ./
           output_dir: export/
-          images_dir: doc/img
+          images_dir: "./doc/img"
           # for example <img src="./images/file-name.png">
-          image_import: ./img
+          image_import: doc/img
           build_pdf: true
           build_html: true
           table_of_contents: true
