--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -68,7 +68,8 @@ jobs:
           mkdir -p doc/img/mermaid
 
       - name: compile mermaid
-        uses: neenjaw/compile-mermaid-markdown-action@0.3.3
+        #uses: neenjaw/compile-mermaid-markdown-action@0.3.3
+        uses: Marloxo/compile-mermaid-markdown-action@0.2.3
         with:
           files: ./${{ env.INPUT_FILENAME }}.md
           output: 'doc/img/mermaid'
