--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -71,11 +71,11 @@ jobs:
         #uses: neenjaw/compile-mermaid-markdown-action@0.3.3
         uses: Marloxo/compile-mermaid-markdown-action@0.2.3
         with:
-          files: ${{ env.INPUT_FILENAME }}.md
+          files: ./${{ env.INPUT_FILENAME }}.md
           output: 'doc/img/mermaid'
         env:
           HIDE_CODEBLOCKS: 1
-          ABSOLUTE_IMAGE_LINKS: 1
+          ABSOLUTE_IMAGE_LINKS: 0
           OUTPUT_FILE_TYPE: "png"
 
       - uses: baileyjm02/markdown-to-pdf@v1
