--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -84,14 +84,14 @@ jobs:
           echo "" >> ./${{ env.INPUT_FILENAME }}.md
           echo "---" >> ./${{ env.INPUT_FILENAME }}.md
           echo "Version: ${{ needs.generate-version.outputs.version }}" >> ./${{ env.INPUT_FILENAME }}.md
+          cat ./${{ env.INPUT_FILENAME }}.md
 
       - name: Generate ToC
         uses: technote-space/toc-generator@v4
         with:
           TARGET_PATHS: ./${{ env.INPUT_FILENAME }}.md
           COMMIT_MESSAGE: "Update ToC"
-          #GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      
+                
       - name: Export to PDF/HTML
         uses: baileyjm02/markdown-to-pdf@v1
         with:
