--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -76,24 +76,9 @@ jobs:
       #    output: 'doc/img/mermaid'
       #  env:
       #    HIDE_CODEBLOCKS: 1
-      #    ABSOLUTE_IMAGE_LINKS: 0
+      #    ABSOLUTE_IMAGE_LINKS: 0  # <-- this has no effect
       #    OUTPUT_FILE_TYPE: "png"
 
-      #- name: Append document version
-      #  run: |
-      #    echo "" >> ./${{ env.INPUT_FILENAME }}.md
-      #    echo "---" >> ./${{ env.INPUT_FILENAME }}.md
-      #    echo "Version: ${{ needs.generate-version.outputs.version }}" >> ./${{ env.INPUT_FILENAME }}.md
-      #    cat ./${{ env.INPUT_FILENAME }}.md
-      #    git diff
-
-      - name: Append document version
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          include: ./${{ env.INPUT_FILENAME }}.md
-          find: "<!-- {{ VERSION }} -->"
-          replace: "Version: ${{ needs.generate-version.outputs.version }}"
-      
       - name: Generate ToC
         uses: technote-space/toc-generator@v4
         with:
@@ -107,24 +92,18 @@ jobs:
           output_dir: export/
           images_dir: "./doc/img"
           image_import: doc/img
+          template: doc/template/template.html
           build_pdf: true
           build_html: true
           table_of_contents: false
 
       - name: Rename export files
         run: |
-          git diff
-          cat ./${{ env.INPUT_FILENAME }}.md
           cd export
           cp ${{ env.INPUT_FILENAME }}.html ./gh-pages/index.html
           mv ${{ env.INPUT_FILENAME }}.pdf ${{ env.OUTPUT_FILENAME }}_${{ needs.generate-version.outputs.version }}.pdf
           mv ${{ env.INPUT_FILENAME }}.html ${{ env.OUTPUT_FILENAME }}_${{ needs.generate-version.outputs.version }}.html
 
-      - name: debug
-        run: |
-          git diff
-          cat ./${{ env.INPUT_FILENAME }}.md
-          
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
