--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -66,18 +66,18 @@ jobs:
       - name: Create export directories
         run: |
           mkdir export
-          #mkdir -p doc/img/mermaid
+          mkdir -p doc/img/mermaid
 
       # mermaid currently places an absolute path which does not work with the PDF export below
-      #- name: compile mermaid
-      #  uses: Marloxo/compile-mermaid-markdown-action@0.2.3
-      #  with:
-      #    files: ./${{ env.INPUT_FILENAME }}.md
-      #    output: 'doc/img/mermaid'
-      #  env:
-      #    HIDE_CODEBLOCKS: 1
-      #    ABSOLUTE_IMAGE_LINKS: 0  # <-- this has no effect
-      #    OUTPUT_FILE_TYPE: "png"
+      - name: compile mermaid
+        uses: Marloxo/compile-mermaid-markdown-action@0.2.3
+        with:
+          files: ./${{ env.INPUT_FILENAME }}.md
+          output: 'doc/img/mermaid'
+        env:
+          HIDE_CODEBLOCKS: 1
+          ABSOLUTE_IMAGE_LINKS: ""
+          OUTPUT_FILE_TYPE: "png"
 
       - name: Generate ToC
         uses: technote-space/toc-generator@v4
