--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -69,7 +69,7 @@ jobs:
           mkdir -p doc/img/mermaid
 
       # mermaid currently places an absolute path which does not work with the PDF export below
-      - name: compile mermaid
+      - name: Compile mermaid diagrams
         uses: Marloxo/compile-mermaid-markdown-action@0.2.3
         with:
           files: ./${{ env.INPUT_FILENAME }}.md
@@ -103,6 +103,8 @@ jobs:
 
       - name: Rename export files
         run: |
+          cat ./${{ env.INPUT_FILENAME }}.md
+          ls -la doc/img/mermaid
           cd export
           mv ${{ env.INPUT_FILENAME }}.pdf ${{ env.OUTPUT_FILENAME }}_${{ needs.generate-version.outputs.version }}.pdf
           mv ${{ env.INPUT_FILENAME }}.html ${{ env.OUTPUT_FILENAME }}_${{ needs.generate-version.outputs.version }}.html
