--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -79,6 +79,13 @@ jobs:
           ABSOLUTE_IMAGE_LINKS: ""
           OUTPUT_FILE_TYPE: "png"
 
+      - name: DEBUG: show changes
+        run: |
+          git status
+          git diff
+          cat ./${{ env.INPUT_FILENAME }}.md
+          ls -la doc/img/mermaid
+          
       - name: Generate ToC
         uses: technote-space/toc-generator@v4
         with:
