--- a/config/accessnode.yaml
+++ b/config/accessnode.yaml
@@ -58,6 +58,8 @@ access-node.desmos:
   enabled: true
   ## deployment specific configuration
   app:
+    ## profile (dev == sbx)
+    profile: dev
     ## information about the access-node operator
     operator:
       # -- did of the organization running the node
