--- a/config/accessnode.yaml
+++ b/config/accessnode.yaml
@@ -74,6 +74,13 @@ access-node.desmos:
       password: postgres
       # -- username to be used
       username: postgres
+      existingSecret:
+        # -- should an existing secret be used
+        enabled: true
+        # -- name of the secret
+        name: desmos-api-secret
+        # -- key to retrieve the password from
+        key: desmos-db-password
 
 ## configuration for the dlt-adapter - see https://DOME-Marketplace.github.io/access-node/dlt-adapter for configuration documentation
 access-node.dlt-adapter:
